--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e57894d6",
+   "id": "4f224fb4",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81f20c8",
+   "id": "77547493",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3426a33e",
+   "id": "6cdc166a",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "884a09aa",
+   "id": "2793a250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f317b007",
+   "id": "4d797f04",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "760ec63c",
+   "id": "fc487f37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06bf275",
+   "id": "c90ce88b",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0a7aeb",
+   "id": "deab798c",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4097562b",
+   "id": "c8371842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4953e365",
+   "id": "48177e49",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c39d0b0",
+   "id": "84acec2c",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f335666f",
+   "id": "fb9f1ab0",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2ab4e630",
+   "id": "eddf49c7",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9ba3f70b",
+   "id": "88b0c307",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "22874b88",
+   "id": "c72c95e7",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "66234ef2",
+   "id": "a4b6892a",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "12b95e70",
+   "id": "6234db96",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "241eced2",
+   "id": "27a4098a",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "accbbe3f",
+   "id": "37602266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "34324d18",
+   "id": "5faf67e6",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f41a6e1f",
+   "id": "9bc7e553",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bbaf06",
+   "id": "b8795dff",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c826f59d",
+   "id": "2a60e932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "11900c3c",
+   "id": "c9b17984",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "24a0f93a",
+   "id": "c64028ff",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "12ee53f8",
+   "id": "19f44d3f",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "430d91f5",
+   "id": "a34cf809",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6a24b244",
+   "id": "4a4ec346",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "de7f9879",
+   "id": "3749a992",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380a9866",
+   "id": "dc480ac3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "383a0fbc",
+   "id": "57cc055b",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4534f896",
+   "id": "0f6dc1b3",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fce75ee1",
+   "id": "f8149c0b",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fd79c88c",
+   "id": "7c6699ec",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4b40f323",
+   "id": "dffa4c4b",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c65cf8f",
+   "id": "aaadaca8",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "661766e2",
+   "id": "54604081",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890776a1",
+   "id": "6a438ff9",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd80bcd",
+   "id": "c5c8d9bc",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "00cc4ae2",
+   "id": "fdf90ab6",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33900d06",
+   "id": "55e8e92d",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -987,10 +987,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "306c8e1d",
+   "execution_count": 36,
+   "id": "4baa7bb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: hello 123 !!\n",
+      "{'vowels': 0, 'digits': 12, 'others': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "counts = {'vowels':0, \n",
     "          'digits':0,\n",
@@ -998,13 +1007,25 @@
     "\n",
     "s = input('Enter a string: ').strip()\n",
     "\n",
-    "for one_character in s:          # go through s, one character at a time\n",
-    "    if one_character.isdigit():  # if one_character is the string '0' through '9'\n",
+    "for one_character in s:            # go through s, one character at a time\n",
+    "    if one_character.isdigit:      # if one_character is the string '0' through '9'\n",
     "        counts['digits'] += 1      # add 1 to counts['digits']\n",
-    "    elif one_character in 'aeiou':\n",
-    "        counts['vowels'] += 1\n",
+    "    elif one_character in 'aeiou': # if it's a vowel...\n",
+    "        counts['vowels'] += 1      # add 1 to counts['vowels']\n",
+    "    else:\n",
+    "        counts['others'] += 1\n",
+    "        \n",
+    "print(counts)        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb54f8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
